--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="assets/css/react-select.css" />
+  <link rel="stylesheet" href="assets/css/bootstrap.css" />
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400italic,500,600,700" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400" rel="stylesheet" />
   <meta charset="utf-8">
   <title>Zoom WebSDK Sample Angular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
